# sistema-de-controle-financeiro-pessoal-financer

./: .env  .env.example  .firebaserc  .gitignore  DEVELOPER_GUIDE.md  INSTRUCOES_SUPABASE.md  README.md  build-release.ps1  bump-version.ps1  checkSupabase.js  deploy-web.ps1  diagSupabase.mjs  email-templates.html  firebase.json  firestore.rules  index.html  metadata.json  migrate-auth-users.js  migrate-community.js  package-lock.json  package.json  publish-firebase.ps1  publish-github.ps1  storage.rules  testSupabase.js  testSystem.mjs  tsconfig.json  updater.json  vite.config.ts
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: build-mac-linux.yml  publish.yml
comunidade/desafios_da_comunidade/: code.html
comunidade/feed_da_comunidade/: code.html
comunidade/grupos_de_investimento/: code.html
functions/: package.json
functions/src/: index.ts
public/: landing.html  updater.json
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json  vukapay-2026.key.pub  vukapay-android.jks  vukapay-signer.key  vukapay-signer.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/windows/: hooks.nsh  license.txt
src/components/: AIAdvisor.tsx  ActionMenu.tsx  AppSecurityGuard.tsx  AutoUpdater.tsx  BackupSyncManager.tsx  CommandBar.tsx  DownloadAppModal.tsx  ErrorBoundary.tsx  HelpModal.tsx  Layout.tsx  LicenseGuard.tsx  PageTransition.tsx  PurchaseLicenseModal.tsx  TransactionModal.tsx
src/context/: AuthContext.tsx  FinanceContext.tsx  LicenseContext.tsx
src/data/: education.ts
(+46 files in other folders)
