[package]
name = "app"
version = "1.0.6"
description = "VukaPay - Controle Financeiro Pessoal"
authors = ["VukaPay"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
sha2 = "0.10"
hex = "0.4"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
